--- a/src/index.css
+++ b/src/index.css
@@ -30,8 +30,8 @@ body {
   padding: 4px 8px;
   border-radius: 10px;
   position: absolute;
-  top: 1rem;
-  left: 1rem;
+  top: 2rem;
+  right: 2rem;
   z-index: 10;
   backdrop-filter: blur(3px);
   user-select: none;
