--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
-*{
+* {
   margin: 0;
   box-sizing: border-box;
 }
@@ -19,20 +19,28 @@ body {
   padding: 0;
 }
 
-.testScore {
+.text {
   font-family: "Bangers", cursive;
   color: tomato;
   letter-spacing: 5px;
 }
 
-.container {
+.container,
+.container2 {
   background-color: rgba(255, 255, 255, 0.3);
   padding: 4px 8px;
   border-radius: 10px;
   position: absolute;
   top: 2rem;
-  right: 2rem;
   z-index: 10;
   backdrop-filter: blur(3px);
   user-select: none;
+}
+
+.container {
+  right: 2rem;
+}
+
+.container2 {
+  left: 2rem;
 }
