--- a/src/App.css
+++ b/src/App.css
@@ -59,14 +59,18 @@ footer {
 
 .controls {
   position: relative;
-  width: 900px;
-  height: 550px;
+  width: 35%;
+  height: 52%;
   background-color: rgba(248, 248, 248, 0.591);
   border-radius: 8px;
   box-shadow: 0 0 12px #16161675;
   opacity: 0.6;
   padding: 1rem;
   font-family: 'Anybody', cursive;
+  text-align: center;
+  padding-bottom: 2rem;
+  
+  
 }
 
 .controls h2{ 
@@ -77,6 +81,7 @@ footer {
     border-radius: 5px;
     border: none;
     margin-bottom: 1rem;
+    
 }
 
 .controls p {
@@ -125,4 +130,8 @@ button {
 }
 .seperator{
     text-align: center;
+}
+
+.ctrl-title{
+    margin-top: 2rem;
 }
