--- a/src/App.css
+++ b/src/App.css
@@ -59,8 +59,8 @@ footer {
 
 .controls {
   position: relative;
-  width: 35%;
-  height: 52%;
+  width: 50%;
+  height: fit-content;
   background-color: rgba(248, 248, 248, 0.591);
   border-radius: 8px;
   box-shadow: 0 0 12px #16161675;
@@ -134,4 +134,8 @@ button {
 
 .ctrl-title{
     margin-top: 2rem;
+}
+
+.toast-position {
+  top: 8rem !important;
 }
