--- a/src/index.css
+++ b/src/index.css
@@ -66,5 +66,15 @@ body {
   user-select: none;
   font-size: 3rem;
   font-weight: bold;
-  padding: 50px 40px;
+  padding: 40px;
+  text-align: center;
+}
+
+
+.toast-position {
+  top: 8rem !important;
+}
+
+.game-over-message{
+  font-size: 0.5em;
 }
