--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Bangers&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Anybody&family=Outfit:wght@300;400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Anybody&family=Outfit:wght@300;400;600&display=swap");
+
+* {
+  margin: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
+
+body,
+html {
+  min-height: 100vh;
+  overflow: hidden;
+}
+
 a {
   text-decoration: none;
   color: whitesmoke;
@@ -32,13 +45,14 @@ a:hover {
 }
 
 footer {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
   right: 0;
   background-color: #333;
   color: whitesmoke;
   padding-top: 1rem;
+  margin-top: 2rem;
 }
 
 .names {
@@ -47,93 +61,231 @@ footer {
   align-items: center;
   list-style-type: none;
   margin-bottom: 20px;
-  font-family: 'Anybody', cursive;
-  padding: 0 5%;
-  gap: 0.3rem;
+  font-family: "Anybody", cursive;
 }
 
 .name-item {
   display: flex;
   align-items: center;
-  gap: 0.2rem;
-  
+  gap: 0.5rem;
 }
 
 .controls {
   position: relative;
-  width: 50%;
+  width: 35%;
   height: fit-content;
   background-color: rgba(248, 248, 248, 0.591);
   border-radius: 8px;
   box-shadow: 0 0 12px #16161675;
   opacity: 0.6;
   padding: 1rem;
-  font-family: 'Anybody', cursive;
+  font-family: "Anybody", cursive;
   text-align: center;
   padding-bottom: 2rem;
-  
-  
+  margin-bottom: 4rem;
 }
 
-.controls h2{ 
-    display: inline-block;
-    background-color: #333;
-    color: whitesmoke;
-    padding: 0.35rem 0.7rem;
-    border-radius: 5px;
-    border: none;
-    margin-bottom: 1rem;
-    
+.controls h2 {
+  display: inline-block;
+  background-color: #333;
+  color: whitesmoke;
+  padding: 0.35rem 0.7rem;
+  border-radius: 5px;
+  border: none;
+  margin-bottom: 1rem;
 }
 
 .controls p {
-    font-size: 1.2rem;
-    line-height: 1.5;
+  font-size: 1.2rem;
+  line-height: 1.5;
 }
 
 .title {
-  position: relative;
   font-family: "Bangers";
   color: tomato;
   font-size: 3rem;
-  top: -3rem;
 }
 
-button {
-    background-color: tomato;
-    color: white;
-    padding: 0.5rem 1rem;
-    font-size: inherit;
-    border-radius: 10px;
-    border: none;
-    animation: pulse infinite ease-in-out 1.5s;
-    margin-top: 1rem;
-    box-shadow: none;
-
+.start-btn {
+  background-color: tomato;
+  color: white;
+  padding: 0.5rem 1rem;
+  font-size: inherit;
+  border-radius: 10px;
+  border: none;
+  animation: pulse infinite ease-in-out 1.5s;
+  margin-top: 1rem;
+  box-shadow: none;
 }
 @keyframes pulse {
-	0% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
-        background-color: tomato;
-	}
+  0% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+    background-color: tomato;
+  }
 
-	70% {
-		transform: scale(1);
-		box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
-        background-color: orangered;
-	}
+  70% {
+    transform: scale(1);
+    box-shadow: 0 0 0 10px rgba(0, 0, 0, 0);
+    background-color: orangered;
+  }
 
-	100% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
-        background-color: red;
-	}
+  100% {
+    transform: scale(0.95);
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    background-color: red;
+  }
 }
-.seperator{
-    text-align: center;
+.seperator {
+  text-align: center;
 }
 
-.ctrl-title{
-    margin-top: 2rem;
+.ctrl-title {
+  margin-top: 2rem;
+}
+
+/* Scoreboard */
+
+.flex-wrapper {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.playagain-btn {
+  font-size: 2rem;
+  background-color: tomato;
+  color: white;
+  font-weight: 700;
+  text-align: center;
+  display: block;
+  margin: 0 auto;
+  padding: 0.7rem 1.4rem;
+  border: none;
+  border-radius: 10px;
+  transition: all ease-in-out 0.3s;
+  opacity: 0.6;
+}
+
+.playagain-btn:hover {
+  scale: 1.1;
+  opacity: 1;
+}
+
+.scoreboard-container {
+  background-color: rgba(0, 0, 0, 0.9);
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  min-height: 100vh;
+  color: #333;
+}
+
+h1 {
+  text-align: center;
+  padding-top: 3rem;
+  font-family: Bangers, monospace;
+  letter-spacing: 1.3px;
+  font-size: 3.5rem;
+  color: tomato;
+}
+
+.board {
+  background-color: white;
+  width: 20%;
+  max-width: 450px;
+  font-family: monospace;
+  font-size: 1.3rem;
+  margin: 1rem auto;
+  padding: 2rem;
+  border-radius: 1rem;
+  line-height: 1.3;
+  outline: 5px dashed tomato;
+  outline-offset: -20px;
+}
+
+.board:hover,
+.score-form:hover {
+  box-shadow: 0 0 20px 7px tomato;
+  scale: 1.04;
+  transition: all 0.4s ease-in-out;
+  outline-offset: 20px;
+}
+
+.score-item,
+.board-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.board-header {
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-size: 2rem;
+  text-decoration: underline;
+  text-decoration-color: tomato;
+  text-decoration-thickness: 5px;
+  margin-bottom: 1rem;
+}
+
+.score-item:hover {
+  background-color: tomato;
+  color: white;
+  padding: 3px 6px;
+  scale: 1.1;
+}
+
+.score-form {
+  width: 20%;
+  max-width: 450px;
+  background-color: white;
+  padding: 2rem;
+  border-radius: 1rem;
+  line-height: 1.3;
+  outline: 5px dashed tomato;
+  outline-offset: -20px;
+  margin: 3rem auto;
+}
+
+.score-form label {
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-decoration: underline;
+  text-decoration-color: tomato;
+  text-decoration-thickness: 5px;
+}
+
+.score-form input {
+  margin: 1rem 0rem;
+  width: 100%;
+  padding: 0.7rem 0.3rem;
+  border-radius: 5px;
+  font-family: monospace;
+  font-size: 1.2rem;
+}
+
+.add-score {
+  width: 100%;
+  padding: 0.35rem 0.7rem;
+  font-family: 1.1rem;
+  border-radius: 5px;
+  font-family: inherit;
+  font-size: 1.1rem;
+  background-color: tomato;
+  color: white;
+  font-weight: 700;
+  border: none;
+  transition: all 0.2s ease-in-out;
+}
+
+.add-score:hover {
+  background: linear-gradient(135deg, orange, tomato);
+}
+
+.burger-canvas {
+  /* background-color: white; */
+  margin-bottom: 2rem;
+}
+
+.burger-canvas-container {
+  height: 400px;
 }
