--- a/src/App.css
+++ b/src/App.css
@@ -61,6 +61,9 @@ footer {
   align-items: center;
   list-style-type: none;
   margin-bottom: 20px;
+  padding: 0px 3%;
+  margin-left: auto;
+  margin-right: auto;
   font-family: "Anybody", cursive;
 }
 
@@ -72,7 +75,7 @@ footer {
 
 .controls {
   position: relative;
-  width: 35%;
+  width: 50%;
   height: fit-content;
   background-color: rgba(248, 248, 248, 0.591);
   border-radius: 8px;
