--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@ body {
 body,
 html {
   min-height: 100vh;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 a {
@@ -191,7 +191,7 @@ h1 {
 
 .board {
   background-color: white;
-  width: 20%;
+  width: 25%;
   max-width: 450px;
   font-family: monospace;
   font-size: 1.3rem;
@@ -235,7 +235,7 @@ h1 {
 }
 
 .score-form {
-  width: 20%;
+  width: 25%;
   max-width: 450px;
   background-color: white;
   padding: 2rem;
@@ -299,4 +299,54 @@ h1 {
   width: fit-content;
   margin: 2rem auto;
   padding: 0.5rem 1rem;
+}
+
+.spinner {
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  border: 30px solid rgb(231, 168, 157);
+  border-top: 30px solid red;
+  animation: spin 1.5s linear infinite;
+  margin: 0 auto;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.spinnerContainer {
+  background-color: rgba(0, 0, 0, 0.9);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  color: white;
+  gap: 2rem;
+}
+
+.spinnerContainer h2 {
+  font-size: 3rem;
+}
+
+.radioButtons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.radioButtons span {
+  display: flex;
+  gap: 0.4rem;
+}
+
+.radioButtons input {
+  accent-color: tomato;
+  scale: 1.2;
 }
