--- a/src/App.css
+++ b/src/App.css
@@ -162,21 +162,22 @@ footer {
   font-weight: 700;
   text-align: center;
   display: block;
-  margin: 0 auto;
+  margin: 2rem auto;
   padding: 0.7rem 1.4rem;
   border: none;
   border-radius: 10px;
   transition: all ease-in-out 0.3s;
-  opacity: 0.6;
 }
 
 .playagain-btn:hover {
   scale: 1.1;
   opacity: 1;
+  background: linear-gradient(135deg, orange, tomato);
 }
 
 .scoreboard-container {
-  background-color: rgba(0, 0, 0, 0.9);
+  /* background-color: #e9c9a1; */
+  background: linear-gradient(135deg, rgb(255, 211, 129), rgb(242, 121, 99));
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   min-height: 100vh;
@@ -285,7 +286,6 @@ h1 {
 }
 
 .burger-canvas {
-  /* background-color: white; */
   margin-bottom: 2rem;
 }
 
