--- a/src/App.css
+++ b/src/App.css
@@ -298,11 +298,11 @@ h1 {
   text-align: center;
   color: tomato;
   /* font-family: bangers, monospace */
-  font-size: 2rem;
-  border: 1px solid tomato;
+  font-size: 3rem;
+  border: 5px dashed tomato;
   width: fit-content;
   margin: 2rem auto;
-  padding: 0.5rem 1rem;
+  padding: 1.4rem 2rem;
 }
 
 .spinner {
