--- a/src/App.css
+++ b/src/App.css
@@ -162,11 +162,12 @@ footer {
   font-weight: 700;
   text-align: center;
   display: block;
-  margin: 2rem auto;
+  margin: 0 auto;
   padding: 0.7rem 1.4rem;
   border: none;
   border-radius: 10px;
   transition: all ease-in-out 0.3s;
+  box-shadow: 3px 3px 10px rgba(255,255,255,1) ;
 }
 
 .playagain-btn:hover {
@@ -177,7 +178,7 @@ footer {
 
 .scoreboard-container {
   /* background-color: #e9c9a1; */
-  background: linear-gradient(135deg, rgb(255, 211, 129), rgb(242, 121, 99));
+  background: linear-gradient(180deg, rgb(185, 232, 253), 50%, rgb(255, 211, 129), rgb(242, 121, 99));
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   min-height: 100vh;
