--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,7 @@ a:hover {
   scale: 1.4;
   cursor: pointer;
 }
+
 .blurry-screen {
   display: flex;
   flex-direction: column;
@@ -44,15 +45,11 @@ a:hover {
   justify-content: center;
 }
 
-footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
+nav {
   background-color: #333;
   color: whitesmoke;
   padding-top: 1rem;
-  margin-top: 2rem;
+  height: 50px;
 }
 
 .names {
@@ -71,6 +68,11 @@ footer {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+
+.name-item:hover {
+  color: goldenrod;
+  font-weight: 600;
 }
 
 .controls {
@@ -157,6 +159,7 @@ footer {
 
 .playagain-btn {
   font-size: 2rem;
+  width: 100%;
   background-color: tomato;
   color: white;
   font-weight: 700;
@@ -167,7 +170,7 @@ footer {
   border: none;
   border-radius: 10px;
   transition: all ease-in-out 0.3s;
-  box-shadow: 3px 3px 10px rgba(255,255,255,1) ;
+  box-shadow: 3px 3px 10px rgba(255, 255, 255, 1);
 }
 
 .playagain-btn:hover {
@@ -178,11 +181,17 @@ footer {
 
 .scoreboard-container {
   /* background-color: #e9c9a1; */
-  background: linear-gradient(180deg, rgb(185, 232, 253), 50%, rgb(255, 211, 129), rgb(242, 121, 99));
+  background: linear-gradient(
+    180deg,
+    rgb(185, 232, 253),
+    50%,
+    rgb(255, 211, 129),
+    rgb(242, 121, 99)
+  );
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  min-height: 100vh;
   color: #333;
+  min-height: 100vh;
 }
 
 h1 {
@@ -240,14 +249,18 @@ h1 {
 }
 
 .score-form {
-  width: 25%;
-  max-width: 450px;
   background-color: white;
   padding: 2rem;
   border-radius: 1rem;
   line-height: 1.3;
   outline: 5px dashed tomato;
   outline-offset: -20px;
+  margin-bottom: 3rem;
+}
+
+.score-form-wrapper {
+  width: 25%;
+  max-width: 450px;
   margin: 3rem auto;
 }
 
@@ -354,4 +367,44 @@ h1 {
 .radioButtons input {
   accent-color: tomato;
   scale: 1.2;
+}
+
+.credits {
+  background-color: white;
+  width: 45%;
+  font-family: monospace;
+  font-size: 1.3rem;
+  margin: 2rem auto 3rem auto;
+  padding: 2rem;
+  border-radius: 1rem;
+  line-height: 1.3;
+  outline: 5px dashed tomato;
+  outline-offset: -20px;
+}
+
+.credits:hover {
+  box-shadow: 0 0 20px 7px tomato;
+  scale: 1.04;
+  transition: all 0.4s ease-in-out;
+  outline-offset: 20px;
+}
+
+.credit-unit:hover {
+  background-color: tomato;
+  color: white;
+  padding: 3px 6px;
+  scale: 1.1;
+}
+
+.credits h3 {
+  font-weight: 600;
+  text-decoration: underline;
+  text-decoration-color: tomato;
+  text-decoration-thickness: 5px;
+}
+
+.grow {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
